real api on server

--- a/src/pages/exhibitor-list/exhibitor-list.scss
+++ b/src/pages/exhibitor-list/exhibitor-list.scss
@@ -64,3 +64,24 @@ page-exhibitor-list {
     
     }
 }
+
+.cat-1 {
+    font-size: 10px;
+    border-radius: 6px;
+    color: #fff;
+    background-color: #488aff;
+}
+
+.cat-2 {
+    font-size: 10px;
+    border-radius: 6px;
+    color: #fff;
+    background-color:#488aff;
+}
+
+.cat-3 {
+    font-size: 10px;
+    border-radius: 6px;
+    color: #fff;
+    background-color: #f53d3d;
+}
