--- a/src/pages/qrscanner/qrscanner.scss
+++ b/src/pages/qrscanner/qrscanner.scss
@@ -1,3 +1,34 @@
 page-qrscanner {
 
+    .line-breaker {
+        margin-left:40%;
+        margin-right:40%;
+        margin-top:15px;
+        padding-top:2px;
+        background-color: #488aff !important;
+      }
+
+    .cat-1 {
+        font-size: 10px;
+        border-radius: 6px;
+        color: #fff;
+        background-color: #488aff;
+    }
+    
+    .cat-2 {
+        font-size: 10px;
+        border-radius: 6px;
+        color: #fff;
+        background-color:#488aff;
+    }
+    
+    .cat-3 {
+        font-size: 10px;
+        border-radius: 6px;
+        color: #fff;
+        background-color: #f53d3d;
+    }
+
 }
+
+
