--- a/src/pages/speaker-detail/speaker-detail.scss
+++ b/src/pages/speaker-detail/speaker-detail.scss
@@ -12,7 +12,25 @@
 .line-breaker {
   margin-left:40%;
   margin-right:40%;
-  margin-top:10px;
+  margin-top:15px;
   padding-top:2px;
   background-color: #488aff !important;
+}
+
+.rate-label {
+  padding-top: 15px;
+}
+
+ul {
+  padding: 0px;
+
+  &.rating li {
+    padding: 5px 10px !important;
+    background: none;
+    color: #ffb400;
+
+    ion-icon {
+      font-size: 30px;
+    }
+  }
 }
